# solx

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-CONSENT.md  README.md  deny.toml  forge-benchmarks.toml  install-solx  o3.ll  oz.ll
.cargo/: config.toml
.github/: ccache-regen.yaml  (+2 more)
solx/: Cargo.toml  build.rs
solx-evm-assembly/: Cargo.toml
solx-evm-assembly/src/: lib.rs
solx-evm-assembly/src/assembly/: data.rs  mod.rs
solx-evm-assembly/src/assembly/instruction/: codecopy.rs  mod.rs  name.rs
solx-evm-assembly/src/ethereal_ir/: entry_link.rs  mod.rs
solx-evm-assembly/src/ethereal_ir/function/: mod.rs  queue_element.rs
solx-evm-assembly/src/ethereal_ir/function/block/: mod.rs
solx-evm-assembly/src/ethereal_ir/function/block/element/: mod.rs
solx-solc/: Cargo.toml  build.rs
solx-solc/src/: lib.rs  solc.rs
solx-solc/src/combined_json/: mod.rs
solx-solc/src/standard_json/input/: mod.rs
solx-solc/src/standard_json/input/settings/: mod.rs  optimizer.rs
solx-solc/src/standard_json/input/settings/selection/: file.rs  mod.rs  selector.rs
solx-solc/src/standard_json/output/: mod.rs  source.rs
solx-solc/src/standard_json/output/contract/: mod.rs
solx-solc/src/standard_json/output/contract/evm/: bytecode.rs  mod.rs
solx-solc/src/standard_json/output/error/: mod.rs
solx-standard-json/: Cargo.toml
solx-standard-json/src/: lib.rs  version.rs
solx-standard-json/src/input/: language.rs  mod.rs  source.rs
solx-standard-json/src/input/settings/: metadata.rs  mod.rs  optimizer.rs
solx-standard-json/src/input/settings/optimizer/: mod.rs  spill_area_size.rs
solx-standard-json/src/input/settings/optimizer/details/: mod.rs  yul_details.rs
solx-standard-json/src/input/settings/selection/: mod.rs  selector.rs
solx-standard-json/src/output/: mod.rs  source.rs
solx-standard-json/src/output/contract/: mod.rs
solx-standard-json/src/output/contract/evm/: bytecode.rs  mod.rs
solx-standard-json/src/output/contract/evm/bytecode/: link_reference.rs  mod.rs
solx-standard-json/src/output/error/: collectable.rs  mapped_location.rs  mod.rs
solx-yul/: Cargo.toml
solx-yul/src/: dependencies.rs  lib.rs
solx-yul/src/yul/: printer.rs
solx-yul/src/yul/lexer/: mod.rs  tests.rs
solx-yul/src/yul/lexer/token/lexeme/: keyword.rs  symbol.rs
solx-yul/src/yul/parser/: error.rs
solx-yul/src/yul/parser/dialect/: mod.rs
solx-yul/src/yul/parser/statement/: assignment.rs  block.rs  code.rs  for_loop.rs  function_definition.rs  if_conditional.rs  mod.rs  object.rs  variable_declaration.rs
solx-yul/src/yul/parser/statement/expression/: mod.rs
solx-yul/src/yul/parser/statement/expression/function_call/: mod.rs  name.rs
solx-yul/src/yul/parser/statement/switch/: case.rs  mod.rs
solx-yul/tests/: printer.rs
solx/src/: const.rs  lib.rs  missing_libraries.rs
solx/src/build_evm/: contract.rs  mod.rs
solx/src/build_evm/contract/: mod.rs  object.rs
solx/src/error/: mod.rs  stack_too_deep.rs
solx/src/evmla/assembly/: data.rs  mod.rs
solx/src/evmla/assembly/instruction/: codecopy.rs  mod.rs  name.rs
solx/src/evmla/ethereal_ir/: entry_link.rs  mod.rs
solx/src/evmla/ethereal_ir/function/: mod.rs
solx/src/evmla/ethereal_ir/function/block/: mod.rs
solx/src/linker/: mod.rs
solx/src/process/: input.rs  input_evm.rs  mod.rs  output.rs
solx/src/project/: mod.rs
solx/src/project/contract/: metadata.rs  mod.rs
solx/src/project/contract/ir/: evmla.rs  llvm_ir.rs  mod.rs  yul.rs
solx/src/solx/: arguments.rs  main.rs
solx/src/yul/parser/: type.rs  wrapper.rs
solx/src/yul/parser/dialect/: mod.rs
solx/src/yul/parser/dialect/era/: attributes.rs  mod.rs
solx/src/yul/parser/statement/: assignment.rs  block.rs  code.rs  for_loop.rs  function_definition.rs  if_conditional.rs  mod.rs  object.rs  variable_declaration.rs
solx/src/yul/parser/statement/expression/: function_call.rs  literal.rs  mod.rs
solx/src/yul/parser/statement/switch/: mod.rs
solx/tests/: solc-bin.json
solx/tests/cli/: abi.rs  allow_paths.rs  asm.rs  asm_solc_json.rs  ast_json.rs  base_path.rs  bin.rs  bin_runtime.rs  combined_json.rs  debug_output_dir.rs  devdoc.rs  evm_version.rs  fallback_oz.rs  general.rs  hashes.rs  include_path.rs  ir.rs  ir_optimized.rs  libraries.rs  llvm_ir.rs  llvm_options.rs  metadata.rs  metadata_hash.rs  metadata_literal.rs  mod.rs  no_cbor_metadata.rs  no_import_callback.rs  optimization.rs  optimization_size_fallback.rs  output_dir.rs  overwrite.rs  recursive_process.rs  remappings.rs  solc.rs  standard_json.rs  storage_layout.rs  threads.rs  transient_storage_layout.rs  userdoc.rs  version.rs  (+2 more)
solx/tests/common/: const.rs  mod.rs
solx/tests/data/contracts/llvm_ir/: Invalid.ll  Test.ll
solx/tests/data/contracts/solidity/: StackTooDeepLLVM.sol  Test.sol
solx/tests/data/contracts/yul/: ObjectNaming.yul
solx/tests/data/standard_json_input/: llvm_ir_urls.json  llvm_ir_urls_invalid.json  llvm_ir_urls_missing.json  llvm_ir_urls_missing_file.json  metadata_hash_ipfs_and_metadata.json  metadata_hash_ipfs_no_metadata.json  metadata_hash_none_and_metadata.json  metadata_hash_none_no_metadata.json  no_cbor_metadata.json  select_all.json  select_all_wildcard.json  select_evm.json  select_evm_bytecode.json  select_evm_bytecode_opcodes.json  select_evm_deployed_bytecode.json  select_evm_deployed_bytecode_link_references.json  select_none.json  select_single.json  solidity.json  solidity_deploy_time_linking.json  solidity_empty_sources.json  solidity_invalid.json  solidity_missing_sources.json  solidity_recursion.json  solidity_solc.json  solidity_solc_empty_sources.json  solidity_solc_invalid.json  solidity_solc_missing_sources.json  solidity_solx_invalid.json  solidity_solx_recursion.json  yul.json  yul_solc.json  yul_solc_urls.json  yul_solc_urls_invalid.json  yul_solx_both_urls_and_content.json  yul_solx_neither_urls_nor_content.json  yul_solx_urls_invalid.json  yul_urls_invalid.json
solx/tests/unit/: combined_json.rs  ir_artifacts.rs  libraries.rs  linker.rs  mod.rs  optimizer.rs  remappings.rs  standard_json.rs
(+18 files in other folders)
