[workspace]
members = [
    "solx",
    "solx-evm-assembly",
    "solx-yul",
    "solx-standard-json",
    "solx-solc",
]
resolver = "2"

[workspace.package]
authors = [
    "The Matter Labs Team <hello@matterlabs.dev>",
]
edition = "2021"
version = "0.1.0-alpha.4"

[patch."https://github.com/matter-labs/era-compiler-llvm-context"]
era-compiler-llvm-context = { package = "era-compiler-llvm-context", path = "../era-compiler-llvm-context" }
