[package]
name = "solx-evm-assembly"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "EVM assembly translator for solx"
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
rayon = "1.10"

serde = { version = "1.0", "features" = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }
semver = { version = "1.0", features = [ "serde" ] }
num = "0.4"

solx-yul = { path = "../solx-yul" }

era-compiler-llvm-context = { package = "era-compiler-llvm-context", path = "../../era-compiler-llvm-context" }
era-compiler-common = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }

[dependencies.inkwell]
git = "https://github.com/matter-labs-forks/inkwell"
branch = "llvm-19"
default-features = false
features = ["llvm19-1", "serde", "no-libffi-linking", "target-evm"]
