[package]
name = "solx-solc"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "solc client for solx"
license = "GPL-3.0"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", "features" = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }
semver = { version = "1.0", features = [ "serde" ] }
libc = "0.2"

era-compiler-common = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }

solx-standard-json = { path = "../solx-standard-json" }