[package]
name = "solx-standard-json"
authors.workspace = true
license = "MIT OR Apache-2.0"
edition.workspace = true
version.workspace = true
description = "Standard JSON protocol for solx"

[lib]
doctest = false

[dependencies]
anyhow = "=1.0.89"
rayon = "=1.10.0"
serde = { version = "=1.0.210", "features" = [ "derive" ] }
serde_json = { version = "=1.0.128", features = [ "arbitrary_precision" ] }
semver = { version = "=1.0.23", features = [ "serde" ] }
num = "=0.4.3"

era-compiler-common = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }