[package]
name = "solx-standard-json"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "Standard JSON protocol for solx"
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
rayon = "1.10"
serde = { version = "1.0", "features" = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }
semver = { version = "1.0", features = [ "serde" ] }
num = "0.4"

era-compiler-common = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }