[package]
name = "solx-yul"
authors.workspace = true
license = "MIT OR Apache-2.0"
edition.workspace = true
version.workspace = true
description = "Yul lexer and parser for solx"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
thiserror = "2.0"

serde = { version = "1.0", "features" = [ "derive" ] }
