[package]
name = "solx-yul"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "Yul lexer and parser for solx"
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
thiserror = "2.0"

serde = { version = "1.0", "features" = [ "derive" ] }
