[package]
name = "solx"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "LLVM-based Solidity compiler for the EVM"
license = "GPL-3.0"
links = "compiler-rt-solx"

[[bin]]
name = "solx"
path = "src/solx/main.rs"

[lib]
doctest = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
path-slash = "0.2"
rayon = "1.10"

serde = { version = "1.0", "features" = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }
semver = { version = "1.0", features = [ "serde" ] }
hex = "0.4"
num = "0.4"

zkevm_opcode_defs = "=0.150.6"

era-compiler-llvm-context = { git = "https://github.com/matter-labs/era-compiler-llvm-context", branch = "az-support-deploy-time-linking" }
era-compiler-common = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }

solx-solc = { path = "../solx-solc" }
solx-standard-json = { path = "../solx-standard-json" }
solx-yul = { path = "../solx-yul" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.19"
test-case = "3.3"

[dependencies.inkwell]
git = "https://github.com/matter-labs-forks/inkwell"
branch = "az-support-deploy-time-linking"
default-features = false
features = ["llvm19-1", "serde", "no-libffi-linking", "target-evm"]
